--- a/styles.css
+++ b/styles.css
@@ -187,8 +187,10 @@ section h2 {
   transform: translateY(15px);
   transition: 0.2s all ease-out;
   z-index: 2;
+  pointer-events: none;
 }
 #process .heading:hover ul {
+  pointer-events: all;
   opacity: 1;
   transform: translateY(0);
 }
