--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ header {
 header a {
   text-transform: uppercase;
   font-size: 12px;
-  font-weight: 600
+  font-weight: 600;
   letter-spacing: 2px;
   position: relative;
   top: -10px;
